Switch to JRE 17 and Tycho 3.0.5
Signed-off-by: frank buloup <frank.buloup@univ-amu.fr>